Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <ul>
 <li>Install the latest versions of both the Java Runtime Environment (JRE) and the Java Development Kit (JDK).</li>
 <li>
-<p>Download either the Eclipse-based <a href="http://developer.android.com/sdk/index.html">ADT</a> or the IntelliJ IDEA-based <a href="http://developer.android.com/sdk/installing/studio.html">Android Studio</a>.<br></p>
+<p>Download either the IntelliJ IDEA-based <a href="http://developer.android.com/sdk/installing/studio.html">Android Studio</a> (Recommended) or the Eclipse-based <a href="http://developer.android.com/sdk/index.html">ADT</a> (Not Recommended, but still included).<br></p>
 
 <p></p>
 <p><b><em>NOTE:</em></b> If you experience an error when installing Android Studio on Windows, please add a new environment variable titled "JAVA_HOME" that points to the JDK Home directory. If this still does not work, add the full location of your JDK to the PATH variable. MAKE SURE that it comes <b>BEFORE</b> the path leading to "C:/Windows/System32".</p>
